--- a/notebooks/Model Evaluation.ipynb
+++ b/notebooks/Model Evaluation.ipynb
@@ -207,43 +207,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Recommending: 100%|██████████| 30719/30719 [1:28:48<00:00,  5.77it/s]   \n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hitrate 0.16\n"
+      "Hitrate 0.17408854166666668\n"
      ]
     }
    ],
    "source": [
     "from coursemate.model import ContentBasedModel\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer,  CountVectorizer\n",
+    "from coursemate.metrics import calculate_hit_rate_from_next_course_sequences\n",
     "\n",
-    "model = ContentBasedModel(course_set=dataset.course_set, Vectorizer=TfidfVectorizer, n_features=10000)\n",
+    "model = ContentBasedModel(course_set=dataset.course_set, Vectorizer=TfidfVectorizer, n_features=1000)\n",
+    "\n",
     "\n",
     "unique_reviewers_X = df_test_X['reviewers'].unique()\n",
     "unique_reviewers_y = df_test_y['reviewers'].unique()\n",
+    "#user_course_df = pd.DataFrame(index=unique_reviewers_X, columns=dataset.course_set.index)\n",
+    "\n",
+    "\n",
     "hits = 0\n",
     "count = 0\n",
-    "for user in unique_reviewers_X:\n",
+    "\n",
+    "for user in tqdm(unique_reviewers_X, desc=\"Recommending\"):\n",
     "    if user in unique_reviewers_y:\n",
+    "        \n",
+    "        count += 1\n",
     "        user_profile = tuple(df_test_X[df_test_X['reviewers'] == user]['course_id'])\n",
     "        target = df_test_y[df_test_y['reviewers'] == user]['course_id']\n",
     "\n",
-    "        recommendations_at_5 = model.recommend(user_profile,5)\n",
-    "        recommendations_at_10  = model.recommend(user_profile,10)\n",
+    "        recommendations = model.recommend(user_profile,5)\n",
     "\n",
-    "        res = len(set(target) & set(recommendations_at_5))\n",
+    "        # for course_id, similarity_score in recommendations:\n",
+    "        #     user_course_df.at[user, course_id] = similarity_score\n",
     "\n",
-    "        count += 1\n",
+    "\n",
+    "        recommendation_ids = [recommendation[0] for recommendation in recommendations]\n",
+    "\n",
+    "        # for course in user_profile:\n",
+    "        #     user_course_df.loc[user, course] = 1\n",
+    "\n",
+    "        res = len(set(target) & set(recommendation_ids))\n",
+    "        \n",
     "        if res > 0:\n",
     "            hits += 1\n",
-    "\n",
-    "    if count == 100:\n",
-    "        break\n",
     "\n",
     "print(\"Hitrate\", hits / count)"
    ]
