--- a/notebooks/Item Based Collaborative Filtering.ipynb
+++ b/notebooks/Item Based Collaborative Filtering.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +83,33 @@
     "# Fit the model with the training data\n",
     "item_cf_model.fit(dataset.train_ratings)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(468, 468)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item_cf_model.course_similarity_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -131,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv('item_based_collab_results', sep='\\t')"
+    "df.to_csv('item_based_collab_results.csv', sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +285,7 @@
        "[3552989 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +296,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7680"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['user_id'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +337,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "131100it [00:07, 16610.99it/s]\n"
+      "131100it [00:08, 14771.81it/s]\n"
      ]
     },
     {
@@ -298,8 +352,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "131100it [00:07, 16852.73it/s]\n",
-      "43119it [00:02, 17502.71it/s]\n"
+      "131100it [00:11, 11574.90it/s]\n",
+      "43119it [00:02, 16748.36it/s]\n"
      ]
     }
    ],
@@ -310,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,6 +395,33 @@
     "\n",
     "# fit with both training X and training y\n",
     "item_based_cf_model.fit(all_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7680/7680 [03:32<00:00, 36.17it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.49296875"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_hit_rate(item_based_cf_model, df_test_X, df_test_y, k=10)"
    ]
   },
   {
@@ -395,6 +476,186 @@
    ],
    "source": [
     "calculate_hit_rate(item_based_cf_model, df_test_X, df_test_y, k=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_precision(model, test_X, test_y, k=5):\n",
+    "    true_positives = 0\n",
+    "    total_recommendations = 0\n",
+    "\n",
+    "    for user_id in tqdm(dataset.test_students):\n",
+    "        user_history = test_X[test_X['reviewers'] == user_id]['course_id'].values\n",
+    "        actual_next_courses = test_y[test_y['reviewers'] == user_id]['course_id'].values\n",
+    "        \n",
+    "        if len(actual_next_courses) == 0:\n",
+    "            continue\n",
+    "\n",
+    "        recommended_courses = model.recommend(user_history, k=k)\n",
+    "        total_recommendations += len(recommended_courses)\n",
+    "        \n",
+    "        # Count the number of true positives\n",
+    "        true_positives += sum(course in actual_next_courses for course in recommended_courses)\n",
+    "\n",
+    "    # Calculate precision\n",
+    "    if total_recommendations == 0:\n",
+    "        return 0\n",
+    "    return true_positives / total_recommendations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7680/7680 [03:43<00:00, 34.41it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.090859375"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_precision(item_based_cf_model, df_test_X, df_test_y, k=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 2/7680 [00:00<06:26, 19.86it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7680/7680 [04:23<00:00, 29.15it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.06274739583333333"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_precision(item_based_cf_model, df_test_X, df_test_y, k=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_recall_precision(model, test_X, test_y, k=5):\n",
+    "    true_positives = 0\n",
+    "    total_recommendations = 0\n",
+    "    total_relevant = 0\n",
+    "\n",
+    "    for user_id in tqdm(dataset.test_students):\n",
+    "        user_history = test_X[test_X['reviewers'] == user_id]['course_id'].values\n",
+    "        actual_next_courses = test_y[test_y['reviewers'] == user_id]['course_id'].values\n",
+    "\n",
+    "        total_relevant += len(actual_next_courses)\n",
+    "        if len(actual_next_courses) == 0:\n",
+    "            continue\n",
+    "\n",
+    "        recommended_courses = model.recommend(user_history, k=k)\n",
+    "        total_recommendations += len(recommended_courses)\n",
+    "\n",
+    "        true_positives += sum(course in actual_next_courses for course in recommended_courses)\n",
+    "\n",
+    "    precision = true_positives / total_recommendations if total_recommendations else 0\n",
+    "    recall = true_positives / total_relevant if total_relevant else 0\n",
+    "    return recall, precision\n",
+    "\n",
+    "def calculate_f1_score(recall, precision):\n",
+    "    if recall + precision == 0:\n",
+    "        return 0\n",
+    "    return 2 * (recall * precision) / (recall + precision)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7680/7680 [04:14<00:00, 30.13it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.12757555258972156"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall, precision = calculate_recall_precision(item_based_cf_model, df_test_X, df_test_y, k=5)\n",
+    "calculate_f1_score(recall, precision)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7680/7680 [04:01<00:00, 31.84it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.10352642942307484"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall, precision = calculate_recall_precision(item_based_cf_model, df_test_X, df_test_y, k=10)\n",
+    "calculate_f1_score(recall, precision)"
    ]
   },
   {
