--- a/notebooks/Model Evaluation.ipynb
+++ b/notebooks/Model Evaluation.ipynb
@@ -980,166 +980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 User-based Collaborative Filtering"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Core idea**\n",
-    "\n",
-    "User-based CF recommends courses based on the preferences of similar users. It identifies users with similar tastes and preferences to the target user and suggests courses that these similar users have liked.\n",
-    "\n",
-    "**Problems**\n",
-    "\n",
-    "As the user base grows, the computation becomes increasingly expensive. This is because the system has to calculate the similarity between the target user and every other user in the system, thus making scalability an issue.\n",
-    "\n",
-    "Also, the system might not work effectively if users have rated only a few courses (the cold start). This is because there might not be enough overlap of preferences between users to make effective recommendations.\n",
-    "\n",
-    "**Process**\n",
-    "\n",
-    "- A user-course matrix is created, and similarities between users are calculated, using their cosine similarity* score.\n",
-    "- For a given user, the system finds other similar users and generates recommendations based on the courses liked or highly rated by these similar users.\n",
-    "\n",
-    "*Other similarity metrics were also considered, such as Pearson correlation and Euclidean distance. However, cosine similarity was chosen as it is more robust to sparse data and gave better results when tested.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "f178199c-cd61-4713-8ea3-dabd6446aa67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from coursemate.model import UserBasedCF\n",
-    "\n",
-    "# Instantiate the UserBasedCF model\n",
-    "user_based_cf_model = UserBasedCF()\n",
-    "\n",
-    "all_train = pd.concat([df_train_X, df_train_y])\n",
-    "\n",
-    "# fit with both training X and training y\n",
-    "user_based_cf_model.fit(all_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['aws-fundamentals-going-cloud-native',\n",
-       " 'information-security-data',\n",
-       " 'sql-for-data-science',\n",
-       " 'python-basics',\n",
-       " 'intro-sql']"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Get recommendations for a particular user\n",
-    "user_id = 'By Kelvin k'\n",
-    "recommendations = user_based_cf_model.recommend(user_id, k=5)\n",
-    "\n",
-    "recommendations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "8ba3aa38-6caf-4b3e-accf-a5400e5e6f2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_hit_rate(model, test_X, test_y, k=5):\n",
-    "    hit_count = 0\n",
-    "    total = 0\n",
-    "\n",
-    "    for user_id in tqdm(dataset.test_students):\n",
-    "        user_history = test_X[test_X['reviewers'] == user_id]['course_id'].values\n",
-    "        actual_next_courses = test_y[test_y['reviewers'] == user_id]['course_id'].values\n",
-    "        \n",
-    "        if len(actual_next_courses) == 0:\n",
-    "            continue\n",
-    "\n",
-    "        recommended_courses = model.recommend(user_history, k=k)\n",
-    "\n",
-    "        hits = any(course in recommended_courses for course in actual_next_courses)\n",
-    "        hit_count += 1 if hits else 0\n",
-    "        total += 1\n",
-    "\n",
-    "    # Calculate overall hit rate\n",
-    "    return hit_count / total"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b02db974-1925-4191-8286-b5030806479b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 7680/7680 [02:32<00:00, 50.45it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.49296875"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calculate_hit_rate(user_based_cf_model, df_test_X, df_test_y, k=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "7018c2e3-1448-491d-94dd-5233bdeedb89",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 7680/7680 [02:18<00:00, 55.35it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.38372395833333334"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calculate_hit_rate(user_based_cf_model, df_test_X, df_test_y, k=5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.2 Item-based Collaborative Filtering"
+    "### 3.1 Item-based Collaborative Filtering"
    ]
   },
   {
@@ -1205,6 +1046,13 @@
     "recommendations = item_based_cf_model.recommend(user_previous_courses, k=5)\n",
     "\n",
     "recommendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These recommendations seem reasonable for the target user."
    ]
   },
   {
@@ -1321,6 +1169,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -1347,7 +1202,187 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 3.2 User-based Collaborative Filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Core idea**\n",
+    "\n",
+    "User-based CF recommends courses based on the preferences of similar users. It identifies users with similar tastes and preferences to the target user and suggests courses that these similar users have liked.\n",
+    "\n",
+    "**Problems**\n",
+    "\n",
+    "As the user base grows, the computation becomes increasingly expensive. This is because the system has to calculate the similarity between the target user and every other user in the system, thus making scalability an issue.\n",
+    "\n",
+    "Also, the system might not work effectively if users have rated only a few courses (the cold start). This is because there might not be enough overlap of preferences between users to make effective recommendations.\n",
+    "\n",
+    "**Process**\n",
+    "\n",
+    "- A user-course matrix is created, and similarities between users are calculated, using their cosine similarity* score.\n",
+    "- For a given user, the system finds other similar users and generates recommendations based on the courses liked or highly rated by these similar users.\n",
+    "\n",
+    "*Other similarity metrics were also considered, such as Pearson correlation and Euclidean distance. However, cosine similarity was chosen as it is more robust to sparse data and gave better results when tested.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f178199c-cd61-4713-8ea3-dabd6446aa67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from coursemate.model import UserBasedCF\n",
+    "\n",
+    "# Instantiate the UserBasedCF model\n",
+    "user_based_cf_model = UserBasedCF()\n",
+    "\n",
+    "all_train = pd.concat([df_train_X, df_train_y])\n",
+    "\n",
+    "# fit with both training X and training y\n",
+    "user_based_cf_model.fit(all_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aws-fundamentals-going-cloud-native',\n",
+       " 'information-security-data',\n",
+       " 'sql-for-data-science',\n",
+       " 'python-basics',\n",
+       " 'intro-sql']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get recommendations for a particular user\n",
+    "user_id = 'By Kelvin k'\n",
+    "recommendations = user_based_cf_model.recommend(user_id, k=5)\n",
+    "\n",
+    "recommendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These recommendations seem reasonable for the target user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8ba3aa38-6caf-4b3e-accf-a5400e5e6f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_hit_rate(model, test_X, test_y, k=5):\n",
+    "    hit_count = 0\n",
+    "    total = 0\n",
+    "\n",
+    "    for user_id in tqdm(dataset.test_students):\n",
+    "        user_history = test_X[test_X['reviewers'] == user_id]['course_id'].values\n",
+    "        actual_next_courses = test_y[test_y['reviewers'] == user_id]['course_id'].values\n",
+    "        \n",
+    "        if len(actual_next_courses) == 0:\n",
+    "            continue\n",
+    "\n",
+    "        recommended_courses = model.recommend(user_history, k=k)\n",
+    "\n",
+    "        hits = any(course in recommended_courses for course in actual_next_courses)\n",
+    "        hit_count += 1 if hits else 0\n",
+    "        total += 1\n",
+    "\n",
+    "    # Calculate overall hit rate\n",
+    "    return hit_count / total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b02db974-1925-4191-8286-b5030806479b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████| 7680/7680 [02:32<00:00, 50.45it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.49296875"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_hit_rate(user_based_cf_model, df_test_X, df_test_y, k=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7018c2e3-1448-491d-94dd-5233bdeedb89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████| 7680/7680 [02:18<00:00, 55.35it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.38372395833333334"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_hit_rate(user_based_cf_model, df_test_X, df_test_y, k=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Conclusion"
    ]
   },
   {
